Prevent fle2 cleanup/compact failures due to concurrent catalog changes

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: 8.3.0-rc0
    • Component/s: Catalog
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2025-09-01
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      fle2 cleanup/compact can fail with a WriteConflict exception due to concurrent catalog changes on the fle2 auxiliary collection. This is because the cleanup/compact implementation performs two distinct set of ShardRole collection acquisitions (1 and 2). The first one will open a storage snapshot and snapshot the catalog. The second acquisition then expects to observe the latest instance of the auxiliary collections, but in might happen that the stashed catalog does not report the latest version when a concurrent operation has made a change to them.

            Assignee:
            Jordi Serra Torrens
            Reporter:
            Jordi Serra Torrens
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: