SERVER-109660 Prevent fle2 cleanup/compact failures due to concurrent catalog changes (#40421)

GitOrigin-RevId: 5d0461ec774b97582d12721bf88d2fda0ec006a9